docs/en/4.0.0/api/cardreader.md
#CardReader
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;10</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#menumerateSTATIC" data-target="cMethodenumerate" class="autouncollapse">enumerate</a></li><li><a href="#mgetDefaultSTATIC" data-target="cMethodgetDefault" class="autouncollapse">getDefault</a></li><li><a href="#msetDefaultSTATIC" data-target="cMethodsetDefault" class="autouncollapse">setDefault</a></li></li><li class="divider"></li><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Instance</i></b></a><li><a href="#mclose" data-target="cMethodclose" class="autouncollapse">close</a></li><li><a href="#mgetAllProperties" data-target="cMethodgetAllProperties" class="autouncollapse">getAllProperties</a></li><li><a href="#mgetProperties" data-target="cMethodgetProperties" class="autouncollapse">getProperties</a></li><li><a href="#mgetProperty" data-target="cMethodgetProperty" class="autouncollapse">getProperty</a></li><li><a href="#mopen" data-target="cMethodopen" class="autouncollapse">open</a></li><li><a href="#msetProperties" data-target="cMethodsetProperties" class="autouncollapse">setProperties</a></li><li><a href="#msetProperty" data-target="cMethodsetProperty" class="autouncollapse">setProperty</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;6</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Instance Properties</i></b></a><li><a href="#pautoEnter" data-target="cPropertyautoEnter" class="autouncollapse">autoEnter</a></li><li><a href="#pautoTab" data-target="cPropertyautoTab" class="autouncollapse">autoTab</a></li><li><a href="#pmoduleName" data-target="cPropertymoduleName" class="autouncollapse">moduleName</a></li><li><a href="#ppanData" data-target="cPropertypanData" class="autouncollapse">panData</a></li><li><a href="#ppinEntry" data-target="cPropertypinEntry" class="autouncollapse">pinEntry</a></li><li><a href="#ppinTimeout" data-target="cPropertypinTimeout" class="autouncollapse">pinTimeout</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Basic Example</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Connect to card reader</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Set card reader properties</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;6</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">General</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Operational Modes (Backwards compatibility with PocketBrowser)</a></li><li><a href="#r2" data-target="rRemark2" class="autouncollapse">Closing the reader while PIN entry pending</a></li><li><a href="#r3" data-target="rRemark3" class="autouncollapse">Blank card data</a></li><li><a href="#r4" data-target="rRemark4" class="autouncollapse">Detaching / Reattaching the Card Reader</a></li><li><a href="#r5" data-target="rRemark5" class="autouncollapse">Encrypted Card data</a></li></ul></div><div class="btn-group"><a href="#License" class="btn"><i class="icon-shopping-cart"></i> Licensing</a></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The Card Reader module decodes the card data when read through a card reader attachment. Currently this is available only on Motorola Solutions devices.</p>
<p>Only the foreground RhoElements application is given access to the card reader hardware, when an application is sent to the background its state will be saved and it will automatically relinquish control of the card reader.  When brought back to the foreground, an application previously using the card reader will have its previous configuration (eg. pinTimeout) reapplied to the card reader automatically.</p>

<h2>Enabling the API</h2>

<p>In order to use this API you must include the following extension in your <code>build.yml</code></p>

<pre><code>:::ruby
extensions: ["cardreader"]
</code></pre>

<p>The <code>cardreader</code> extension is also included automatically if you specify the following in your <code>build.yml</code></p>

<pre><code>:::ruby
app_type: "rhoelements"
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mclose'/><div class=' method  js ruby android msi' id='mclose'><h3><strong  >close</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mclose1" data-toggle="tab">Description</a></li><li ><a href="#mclose4" data-toggle="tab">Return</a></li><li ><a href="#mclose6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-close'><div class="tab-pane fade active in" id="mclose1"><p>Closes the card reader</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"></p></div></p></div><div class="tab-pane fade" id="mclose2"></div><div class="tab-pane fade" id="mclose3"></div><div class="tab-pane fade" id="mclose4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mclose6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.close()</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.close()</code> </li><li>Ruby: <code>Rho::CardReader.close()</code></li></ul></li></ul></div></div></div>  </div><a name ='menumerateSTATIC'/><div class=' method  js ruby android' id='menumerateSTATIC'><h3><strong  >enumerate</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#menumerateSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#menumerateSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#menumerateSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#menumerateSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#menumerateSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enumerateSTATIC'><div class="tab-pane fade active in" id="menumerateSTATIC1"><p>Enumerates all the available card readers</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="menumerateSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>ARRAY</span></strong></p><ul><ul><li>cardreaderArray : <span class='text-info'>SELF_INSTANCE: CardReader</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>ARRAY : Array of Card reader objects. : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li>cardreaderArray : <span class='text-info'>SELF_INSTANCE: CardReader</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.CardReader.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::CardReader.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetAllProperties'/><div class=' method  js ruby android' id='mgetAllProperties'><h3><strong  >getAllProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetAllProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetAllProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetAllProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetAllProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetAllProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getAllProperties'><div class="tab-pane fade active in" id="mgetAllProperties1"><p>This method will return all of object/value pairs for the propertyNames of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetAllProperties2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetAllProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : Map of all available properties : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::CardReader.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDefaultSTATIC'/><div class=' method  js ruby android' id='mgetDefaultSTATIC'><h3><strong  >getDefault</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mgetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mgetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getDefaultSTATIC'><div class="tab-pane fade active in" id="mgetDefaultSTATIC1"><p>This method will return an object that represents the default instance of the API Class. For example Camera.getDefault will return a Camera object that represents the default camera.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetDefaultSTATIC2"></div><div class="tab-pane fade" id="mgetDefaultSTATIC3"></div><div class="tab-pane fade" id="mgetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>SELF_INSTANCE : Default object of Module.</li></ul></div></div><div class="tab-pane fade" id="mgetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.CardReader.getDefault()</code> </li><li>Ruby: <code>Rho::CardReader.getDefault()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperties'/><div class=' method  js ruby android' id='mgetProperties'><h3><strong  >getProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperties'><div class="tab-pane fade active in" id="mgetProperties1"><p>This method will return a set of object/value pairs for the list of the propertyName that is passed in. The propertyNames must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperties2"><div><p><strong>Parameters</strong></p><ul><li>arrayofNames : <span class='text-info'>ARRAY</span><p>List of properties I want to know about </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : Map of properties I want to know about : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::CardReader.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperty'/><div class=' method  js ruby android' id='mgetProperty'><h3><strong  >getProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperty1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperty3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperty4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperty'><div class="tab-pane fade active in" id="mgetProperty1"><p>This method will return the value of the propertyName that is passed in. The propertyName must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p>The property to return info about. </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperty3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>STRING</span></strong></p><ul></ul></div></div><div class="tab-pane fade" id="mgetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : The property to return info about. : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mgetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::CardReader.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mopen'/><div class=' method  js ruby android msi' id='mopen'><h3><strong  >open</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mopen1" data-toggle="tab">Description</a></li><li ><a href="#mopen2" data-toggle="tab">Parameters</a></li><li ><a href="#mopen3" data-toggle="tab">Callback</a></li><li ><a href="#mopen4" data-toggle="tab">Return</a></li><li ><a href="#mopen6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-open'><div class="tab-pane fade active in" id="mopen1"><p>Opens the card reader.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"></p></div></p></div><div class="tab-pane fade" id="mopen2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mopen3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>data : <span class='text-info'>STRING</span><p>Data read by the card reader. This may be card data, the PAN data extracted from the card data, encrypted PIN block data, or a message. In case of an ISO/ABA card [eg: a financial card], data is encrypted. For other cards, data is in the clear. </p></li><li>mode : <span class='text-info'>STRING</span><p>Describes the data. This will be either: 'CR','ENCDATA','PAN', or 'MESSAGE'.  This equates to card data, encrypted PIN block data, PAN data, or a message, respectively. </p></li><li>encryption : <span class='text-info'>BOOLEAN</span><p>This provides the information regarding the card reader head configuration. Available only on Android. </p></li><li>rawData : <span class='text-info'>STRING</span><p>This is the raw data read by the card reader from all the tracks. Available only on Android and the value is in HEX format. </p></li><li>track1 : <span class='text-info'>STRING</span><p>The track1 clear/masked data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track1Status value returned is true. </p></li><li>track2 : <span class='text-info'>STRING</span><p>The track2 clear/masked data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track2Status value returned is true. </p></li><li>track3 : <span class='text-info'>STRING</span><p>The track3 clear/masked data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track3Status value returned is true. </p></li><li>track1Status : <span class='text-info'>BOOLEAN</span><p>The status of the track1 clear/masked data read by the card reader. Available only on Android. </p></li><li>track2Status : <span class='text-info'>BOOLEAN</span><p>The status of the track2 clear/masked data read by the card reader. Available only on Android. </p></li><li>track3Status : <span class='text-info'>BOOLEAN</span><p>The status of the track3 clear/masked data read by the card reader. Available only on Android. </p></li><li>track1Encrypted : <span class='text-info'>STRING</span><p>The track1 encrypted data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track1EncryptedStatus value returned is true. </p></li><li>track2Encrypted : <span class='text-info'>STRING</span><p>The track2 encrypted data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track2EncryptedStatus value returned is true. </p></li><li>track3Encrypted : <span class='text-info'>STRING</span><p>The track3 encrypted data read by the card reader. Available only on Android and the value is in HEX format. This value should be used only when the track3EncryptedStatus value returned is true. </p></li><li>track1EncryptedStatus : <span class='text-info'>BOOLEAN</span><p>The status of the track1 encrypted data read by the card reader. Available only on Android. </p></li><li>track2EncryptedStatus : <span class='text-info'>BOOLEAN</span><p>The status of the track2 encrypted data read by the card reader. Available only on Android. </p></li><li>track3EncryptedStatus : <span class='text-info'>BOOLEAN</span><p>The status of the track3 encrypted data read by the card reader. Available only on Android. </p></li><li>ksn : <span class='text-info'>STRING</span><p>The encrypted KSN serial number read by the card reader. Available only on Android and the value is in HEX format. </p></li></ul></ul></div></div><div class="tab-pane fade" id="mopen4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mopen6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.open(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.open(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::CardReader.open(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetDefaultSTATIC'/><div class=' method  js ruby android' id='msetDefaultSTATIC'><h3><strong  >setDefault</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">SELF_INSTANCE: CardReader</span> defaultInstance)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetDefaultSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setDefaultSTATIC'><div class="tab-pane fade active in" id="msetDefaultSTATIC1"><p>This method allows you to set the attributes of the default object instance by passing in an object of the same class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetDefaultSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>defaultInstance : <span class='text-info'>SELF_INSTANCE: CardReader</span><p>An instance object that is of the same class. </p></li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC3"></div><div class="tab-pane fade" id="msetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.CardReader.setDefault(<span class="text-info">SELF_INSTANCE: CardReader</span> defaultInstance)</code> </li><li>Ruby: <code>Rho::CardReader.setDefault(<span class="text-info">SELF_INSTANCE: CardReader</span> defaultInstance)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperties'/><div class=' method  js ruby android' id='msetProperties'><h3><strong  >setProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperties1" data-toggle="tab">Description</a></li><li ><a href="#msetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperties4" data-toggle="tab">Return</a></li><li ><a href="#msetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperties'><div class="tab-pane fade active in" id="msetProperties1"><p>This method will set the values of a list of properties for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperties2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p>Map of properties I want to set </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetProperties3"></div><div class="tab-pane fade" id="msetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.setProperties(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::CardReader.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperty'/><div class=' method  js ruby android' id='msetProperty'><h3><strong  >setProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperty1" data-toggle="tab">Description</a></li><li ><a href="#msetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperty4" data-toggle="tab">Return</a></li><li ><a href="#msetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperty'><div class="tab-pane fade active in" id="msetProperty1"><p>This method will set the value of a property for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p>The one property name that I want to set </p></li><li>propertyValue : <span class='text-info'>STRING</span><p>The one property value that I want to set </p></li></ul></div></div><div class="tab-pane fade" id="msetProperty3"></div><div class="tab-pane fade" id="msetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code> </li><li>Ruby: <code>Rho::CardReader.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pautoEnter'></a><div class=' method  js ruby android msi' id='pautoEnter'><h3><strong  >autoEnter</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pautoEnter1" data-toggle="tab">Description</a></li><li ><a href="#pautoEnter2" data-toggle="tab">Params</a></li><li ><a href="#pautoEnter6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-autoEnter'><div class="tab-pane fade active in" id="pautoEnter1">When enabled, appends a carriage return to any data returned as keystrokes by the cardreader.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> </p></div></p></div><div class="tab-pane fade" id="pautoEnter2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pautoEnter5"></div><div class="tab-pane fade" id="pautoEnter6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.autoEnter</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.autoEnter</code> </li><li>Ruby: <code>Rho::CardReader.autoEnter</code></li></ul></li></ul></div></div></div>  </div><a name='pautoTab'></a><div class=' method  js ruby android msi' id='pautoTab'><h3><strong  >autoTab</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pautoTab1" data-toggle="tab">Description</a></li><li ><a href="#pautoTab2" data-toggle="tab">Params</a></li><li ><a href="#pautoTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-autoTab'><div class="tab-pane fade active in" id="pautoTab1">When enabled, appends a tab to any data returned as keystrokes by the cardreader.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> </p></div></p></div><div class="tab-pane fade" id="pautoTab2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pautoTab5"></div><div class="tab-pane fade" id="pautoTab6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.autoTab</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.autoTab</code> </li><li>Ruby: <code>Rho::CardReader.autoTab</code></li></ul></li></ul></div></div></div>  </div><a name='pmoduleName'></a><div class=' method  js ruby msi' id='pmoduleName'><h3><strong  ><span class="text-error">moduleName</span></strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pmoduleName1" data-toggle="tab">Description</a></li><li ><a href="#pmoduleName5" data-toggle="tab">Values</a></li><li ><a href="#pmoduleName6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-moduleName'><div class="tab-pane fade active in" id="pmoduleName1"><span class='label label-important'>Deprecated</span> This method is present to provide backwards compatibility with PocketBrowser code, devices supported by RhoElements will have a single card reader driver installed as part of the platform.  If the device has multiple card reader drivers installed this parameter is used to select which driver to use.  The drivers present are output in the log file when the card reader is initialised.  This parameter is also used to distinguish between an MSR and a DCR, e.g. if you attach a DCR7000 to your device you can specify that only the MSR functionality is used by specifying this parameter as 'MSR7000'<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> </p></div></p></div><div class="tab-pane fade" id="pmoduleName2"></div><div class="tab-pane fade" id="pmoduleName5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>CardReader.MSR9000 - (msr9000)</dt><dd>MSR9000 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSR3000.DLL</dt><dt>CardReader.MSR9001 - (msr9001)</dt><dd>MSR9001 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSR3000.DLL</dt><dt>CardReader.MSR9500 - (msr9500)</dt><dd>MSR9500 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSRMC50.DLL</dt><dt>CardReader.MSRCAMEO - (msrcameo)</dt><dd>MSRCAMEO drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSRCAMEO.DLL</dt><dt>CardReader.MSR7000 - (msr7000)</dt><dd>MSR7000 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e.  MSRMC50.DLL</dt><dt>CardReader.DCR7000 - (dcr7000)</dt><dd>DCR7000 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSRMC50.DLL</dt><dt>CardReader.MSR55 - (msr55)</dt><dd>MSR55 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSRMC55.DLL</dt><dt>CardReader.MSR3000 - (msr3000)</dt><dd>MSR3000 drivers. Return value while getting the property of moduleName will be its associated DLL name i.e. MSR3000.DLL</dt></dl></div><div class="tab-pane fade" id="pmoduleName6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.moduleName</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.moduleName</code> </li><li>Ruby: <code>Rho::CardReader.moduleName</code></li></ul></li></ul></div></div></div>  </div><a name='ppanData'></a><div class=' method  js ruby msi' id='ppanData'><h3><strong  >panData</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppanData1" data-toggle="tab">Description</a></li><li ><a href="#ppanData6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-panData'><div class="tab-pane fade active in" id="ppanData1">Sets the card data without the need of a swipe.  This accepts any 16 digit number as the string value. Also ensure that pinEntry should be true before getting the property of panData.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> (Only compatible with DCR7000-x00)</p></div></p></div><div class="tab-pane fade" id="ppanData2"></div><div class="tab-pane fade" id="ppanData5"></div><div class="tab-pane fade" id="ppanData6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.panData</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.panData</code> </li><li>Ruby: <code>Rho::CardReader.panData</code></li></ul></li></ul></div></div></div>  </div><a name='ppinEntry'></a><div class=' method  js ruby msi' id='ppinEntry'><h3><strong  >pinEntry</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppinEntry1" data-toggle="tab">Description</a></li><li ><a href="#ppinEntry6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-pinEntry'><div class="tab-pane fade active in" id="ppinEntry1">Turns the PIN entry on or off.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> (Only compatible with DCR7000-x00)</p></div></p></div><div class="tab-pane fade" id="ppinEntry2"></div><div class="tab-pane fade" id="ppinEntry5"></div><div class="tab-pane fade" id="ppinEntry6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.pinEntry</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.pinEntry</code> </li><li>Ruby: <code>Rho::CardReader.pinEntry</code></li></ul></li></ul></div></div></div>  </div><a name='ppinTimeout'></a><div class=' method  js ruby msi' id='ppinTimeout'><h3><strong  >pinTimeout</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppinTimeout1" data-toggle="tab">Description</a></li><li ><a href="#ppinTimeout2" data-toggle="tab">Params</a></li><li ><a href="#ppinTimeout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-pinTimeout'><div class="tab-pane fade active in" id="ppinTimeout1">PIN entry timeout in milliseconds. A value of 65535 sets the timeout to infinite. Accepts values between 0 and 65535.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/motowebkit.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Motorola Devices Only"> (Only compatible with DCR7000-x00)</p></div></p></div><div class="tab-pane fade" id="ppinTimeout2"><p><strong>Default:</strong> 30000</p></div><div class="tab-pane fade" id="ppinTimeout5"></div><div class="tab-pane fade" id="ppinTimeout6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.pinTimeout</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.CardReader.pinTimeout</code> </li><li>Ruby: <code>Rho::CardReader.pinTimeout</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Basic Example</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">

                    The default card reader on the device is enabled when the index view is loaded. When a card is swiped the swipeEvent is called.
                <ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby
            
#/app/Model
def index
    Rho::CardReader.open(url_for(:action =&gt; :myswipeevent))
end
  def myswipeevent       
       puts "Swipe params: #{@params}"
       puts "Mode is #{@params['mode']}"
	   puts "Data is #{@params['data']}"       
  end 
                    

                </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Connect to card reader</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">

                   Enable card reader and receive a callback when a card is swiped
               <ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
function cardreader_callback(params) {
  alert("Received data from card reader: "+params["data"]);
}

function connect() {
  Rho.CardReader.open(cardreader_callback);
}
                   
                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
def connect
  Rho::CardReader.open(url_for(:action =&gt; :cardreader_callback))
  redirect :index
end

def cardreader_callback
  Alert.show_popup("Received card reader data: #{@params[:data]}")
end
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Set card reader properties</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">

                   There are two ways to use the card reader. One is to receive a callback when a card is swiped, the other is to have it simulate keypresses. See below for an example of this second option
               <ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

           
// Configure the MSR to output keystrokes instead of calling a function when a card is swiped
// Note the absence of a callback parameter
// Also, After emitting the keystrokes, automatically send a "Tab" keypress
Rho.CardReader.autoTab = true;
Rho.CardReader.open();

Rho.CardReader.autoEnter = true;
Rho.CardReader.open();
                   
                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Configure the MSR to output keystrokes instead of calling a function when a card is swiped
# Note the absence of a callback parameter
# Also, After emitting the keystrokes, automatically send a "Tab" keypress
Rho::CardReader.autoTab = true
Rho::CardReader.open()

# Instead of "Tab", we could request a simulated "Enter" 
Rho::CardReader.autoEnter = true
Rho::CardReader.open()
                   
                 </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>General</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>If the CardReader open method is not specified with a callback, the cardreader data will be returned as keystrokes. If both the autotab and autoenter parameters are set to &ldquo;enabled&rdquo;, autoenter will take precedence. An opened card reader must be closed before the attached card reader device and associated modulename parameter are changed. Any attempt to set a parameter to an invalid value, will result in no effect on the parameter&rsquo;s current value.</p>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Operational Modes (Backwards compatibility with PocketBrowser)</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><p>For the DCR7000 the ModuleName parameter must be set at least once before the readevent parameter is set. If the card reader is an MSR, when a card is swiped it returns the data read from the card. Setting ModuleName to a DCR will cause the card data to be returned followed by the PAN Data before waiting for a PIN to be entered on the keypad. Once entered the PIN will be encrypted and returned by a third ReadEvent. The card must be a validly formatted IATA or ABA card.</p>
  </div></div></div></div><a name='r2'></a><div class=' remarks' id='r2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark2"><strong>Closing the reader while PIN entry pending</strong></div><div id="cRemark2" class="accordion-body">  <div class="accordion-inner"><p>There is no way to abort a pending PIN entry (other than the customer pressing the Cancel button), for security reasons. Therefore if the reader is closed or RhoElements is quit during that time it will become unresponsive until a PIN is entered or the PIN timeout occurs.</p>
  </div></div></div></div><a name='r3'></a><div class=' remarks' id='r3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark3"><strong>Blank card data</strong></div><div id="cRemark3" class="accordion-body">  <div class="accordion-inner"><p>In certain circumstances it is possible that the card reader may return empty card data. The JavaScript event function should be able to handle this correctly.</p>
  </div></div></div></div><a name='r4'></a><div class=' remarks' id='r4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark4"><strong>Detaching / Reattaching the Card Reader</strong></div><div id="cRemark4" class="accordion-body">  <div class="accordion-inner"><p>Applications running in RhoElements should be resilient against the card reader being detached and subsequently reattached. Card data parsing code should be robust against unexpected characters in the first read after reattachment.</p>
  </div></div></div></div><a name='r5'></a><div class=' remarks' id='r5'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark5"><strong>Encrypted Card data</strong></div><div id="cRemark5" class="accordion-body">  <div class="accordion-inner"><p>The encrypted data is supported only on the card readres that are configured for encryption. Since the encrypted data might contain unreadable characters sometimes it is recommended to use only JSON object method rather than JavaScript &lsquo;%s&rsquo; notation.</p>
  </div></div></div></div>
<a name='License'></a>
<h2><i class='icon-shopping-cart'></i>Licensing</h2>

<div class="accordion" id="accordion">You can fully use all features of this API during evaluation, development or testing without obtaining a license. A message will be displayed on application startup and will also display a nag screen periodically. Before deploying an application to a production environment, you must obtain a license key. <a href='/guide/licensing'>Read more about licensing</a>.</div></div>